--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "a9863f79-8199-4171-9500-fcdc31e65e55"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
